@@ -4,21 +4,23 @@ import lombok.extern.slf4j.Slf4j;
 import net.cserny.filesystem.FilesystemProperties;
 import net.cserny.filesystem.LocalFileService;
 import net.cserny.filesystem.LocalPath;
+import net.cserny.generated.MediaFileType;
+import net.cserny.generated.MediaRenameOrigin;
+import net.cserny.generated.RenamedMediaOptions;
 import net.cserny.rename.NameNormalizer.NameYear;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.annotation.Order;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static net.cserny.filesystem.LocalFileService.WalkOptions.ONLY_DIRECTORIES;
-import static net.cserny.rename.MediaDescription.generateDescFrom;
+import static net.cserny.CommanderApplication.toOneLineString;
+import static net.cserny.filesystem.ExcludingFileVisitor.WalkOptions.ONLY_DIRECTORIES;
+import static net.cserny.rename.MediaRenameService.generateDescDataFrom;
 
 @Order(0)
 @Component
@@ -45,25 +47,25 @@ public class DiskSearcher implements Searcher {
         List<String> nameVariants = new ArrayList<>();
 
         try {
-            List<Path> paths = localFileService.walk(mediaPath, renameConfig.getMaxDepth(), ONLY_DIRECTORIES);
+            List<LocalPath> paths = localFileService.walk(mediaPath, renameConfig.getMaxDepth(), ONLY_DIRECTORIES);
 
-           nameVariants = paths.stream()
-                    .filter(path -> !mediaPath.path().equals(path))
-                    .map(this::convertAndtrimReleaseDate)
+           nameVariants = paths.stream().parallel()
+                    .filter(path -> !mediaPath.equals(path))
+                    .map(this::convertAndTrimReleaseDate)
                     .map(diskPath -> parseDistance(diskPath, nameYear.name()))
                     .filter(diskPath -> excludeNotSimilarPaths(diskPath, nameYear.name()))
                     .sorted(Comparator.comparing(DiskPath::distance))
                     .map(this::chooseCorrectPath)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
-            log.warn("Could not walk path " + mediaPath.path(), e);
+            log.warn("Could not walk path {}, error: {}", mediaPath, e.getMessage());
         }
 
-        return new RenamedMediaOptions(MediaRenameOrigin.DISK, generateDescFrom(nameVariants));
+        return new RenamedMediaOptions().origin(MediaRenameOrigin.DISK).mediaDescriptions(generateDescDataFrom(nameVariants));
     }
 
-    private DiskPath convertAndtrimReleaseDate(Path path) {
-        String folder = path.getFileName().toString();
+    private DiskPath convertAndTrimReleaseDate(LocalPath path) {
+        String folder = path.path().getFileName().toString();
         String trimmedLocalPath = folder.replaceAll(releaseDateRegex.pattern(), "");
         return new DiskPath(null, folder, trimmedLocalPath);
     }
@@ -73,7 +75,7 @@ public class DiskSearcher implements Searcher {
         int simPercent = SimilarityService.getSimilarityPercent(diskPath.distance(), bigger);
         if (simPercent >= renameConfig.getSimilarityPercent()) {
             log.info("For path {}, the disk path {} is {}% similar with distance of {}",
-                    name, diskPath.trimmedLocalPpath(), simPercent, diskPath.distance());
+                    name, diskPath.trimmedLocalPpath(), simPercent, toOneLineString(diskPath.distance()));
             return true;
         }
         return false;
