@@ -1,6 +1,10 @@
 package net.cserny.rename;
 
 import lombok.extern.slf4j.Slf4j;
+import net.cserny.generated.MediaDescriptionData;
+import net.cserny.generated.MediaFileType;
+import net.cserny.generated.MediaRenameOrigin;
+import net.cserny.generated.RenamedMediaOptions;
 import net.cserny.rename.NameNormalizer.NameYear;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.annotation.Order;
@@ -9,7 +13,6 @@ import org.springframework.stereotype.Component;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Order(1)
@@ -26,26 +29,21 @@ public class OnlineCacheSearcher implements Searcher {
         List<OnlineCacheItem> items;
         if (nameYear.year() == null) {
             log.warn("No year specified, searching cache only by name {}", nameYear.name());
-            items = repository.findByNameAndType(nameYear.name(), type);
+            items = repository.findByNameAndType(nameYear.name(), type.getValue());
         } else {
-            items = repository.findByNameYearAndType(nameYear.name(), nameYear.year(), type);
+            items = repository.findByNameYearAndType(nameYear.name(), nameYear.year(), type.getValue());
         }
 
-        List<MediaDescription> mediaDescriptions = items.stream()
-                .map(this::convert)
-                .collect(Collectors.toList());
+        List<MediaDescriptionData> mediaDescriptions = items.stream().map(this::convert).toList();
 
-        return new RenamedMediaOptions(MediaRenameOrigin.CACHE, mediaDescriptions);
+        return new RenamedMediaOptions().origin(MediaRenameOrigin.CACHE)
+                .mediaDescriptions(mediaDescriptions);
     }
 
-    private MediaDescription convert(OnlineCacheItem item) {
+    private MediaDescriptionData convert(OnlineCacheItem item) {
         String date = item.getDate() == null ? null : utcDateFormatter.format(item.getDate());
-        return new MediaDescription(
-                item.getCoverPath(),
-                item.getTitle(),
-                date,
-                item.getDescription(),
-                item.getCast()
-        );
+        return new MediaDescriptionData().posterUrl(item.getCoverPath())
+                .title(item.getTitle()).date(date).description(item.getDescription())
+                .cast(item.getCast());
     }
 }
